# PulseAgent

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
docs/: agent-wrapper.md
src/pulse_agent/: __init__.py  cli.py  context.py  events.py  mcp_server.py  models.py  policy.py  protocol.py  watcher.py
tests/: test_context.py  test_mcp_http_e2e.py  test_mcp_server.py  test_policy.py  test_protocol.py
