[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "pulse-agent"
version = "0.1.0"
description = "Interrupt-aware MCP sidecar for coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "PulseAgent contributors" }
]
keywords = ["mcp", "coding-agent", "sidecar", "planning", "interrupts"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development"
]
dependencies = [
  "mcp>=1.16.0",
  "pydantic>=2.8",
  "typer>=0.12",
  "watchfiles>=0.24"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.8"
]

[project.scripts]
pulse = "pulse_agent.cli:app"

[project.urls]
Homepage = "https://github.com/zhangyh0426/PulseAgent"
Issues = "https://github.com/zhangyh0426/PulseAgent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pulse_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
